# Customer-Support-Automation-using-RAG-Based-Bot

./: README.md  app.py  knowledge_base.py  metrics.py  pyproject.toml  rag_system.py  replit.md  simple_rag_system.py
config/: settings.py
data/: knowledge_base.json
src/: knowledge_base.py  logger.py  metrics.py  rag_system.py
