[tool.poetry]
name = "ai-customer-support"
version = "1.0.0"
description = "AI Customer Support System with RAG"
authors = ["Your Name <email@company.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.47.0"
openai = "^1.97.1"
pandas = "^2.3.1"
numpy = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"